Resources larger than 10MB are not stored in the disk cache https://bugs.webkit.org/show_bug.cgi?id=207967 <rdar://problem/59572084>

Reviewed by Darin Adler.

This patch makes two policy changes to our disk cache:
1. The capacity of the disk cache is now doubled. Based on available disk space, it could
   previously use up to 500MB of disk space. The limit is now 1GB.
2. The per cache-entry limit is raised from 10MB to 1/8 of the disk cache capacity (so
   up to 128MB based on new maximum capacity).

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::didReceiveBuffer):
* Shared/CacheModel.cpp:
(WebKit::calculateURLCacheSizes):


Canonical link: https://commits.webkit.org/220954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257041 268f45cc-cd09-0410-ab3c-d52691b4dbfc